# Ollama_SDLC_CrewAI_MultiAgent_Orchestration

./: .coveragerc  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_DOCUMENTATION.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run_crewai_sdlc.py  run_sdlc.py
crewai_output/: conversation_log.json  manifest.json
crewai_output/71e86df3-1dad-4144-b2e2-985bdc3010b0/: 01_specification.md  02_code.py  03_review.md  04_tests.py  05_documentation.md  06_devops.md  07_ui_app.py  conversation_log.json  manifest.json
crewai_output/79ac9c1e-fbd7-4893-8ba3-842990d98ee1/: 01_specification.md  02_code.py  03_review.md  04_tests.py  05_documentation.md  06_devops.md  07_ui_app.py  conversation_log.json  manifest.json
crewai_sdlc/: __init__.py  config.py  crew.py
docs/: History — SDLC Dashboard.html  New Pipeline — SDLC Dashboard.html  Run 71e86df3 — SDLC Dashboard.html
docs/Run 71e86df3 — SDLC Dashboard_files/: css2
docs/screenshots/: README.md
flask_app/: app.py
flask_app/templates/: 404.html  base.html  detail.html  history.html  index.html  live.html
sdlc_agents/: __init__.py  agents.py  base_agent.py  config.py  orchestrator.py
