[project]
name = "ollama-sdlc-crewai"
version = "1.0.0"
description = "Multi-agent SDLC orchestration powered by Ollama & CrewAI — 7 AI agents, 3 local LLMs, 100% offline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "nareshvrde5220" },
]
keywords = ["ollama", "crewai", "sdlc", "multi-agent", "llm", "ai-agents", "code-generation"]

dependencies = [
    "crewai>=0.80.0",
    "litellm>=1.40.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[project.urls]
Repository = "https://github.com/nareshvrde5220/Ollama_SDLC_CrewAI_MultiAgent_Orchestration"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
